# macos-monitor-HiDPI-setup-tool

./: .editorconfig  .gitignore  DEVELOPMENT.md  DEVELOPMENT_LOG.md  FISH_GUIDE.md  INSTALL.md  LICENSE  Monitor Layout Manager  MyIcon.icns  README.md  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v1.5.0.md  app_icon.icns  app_launcher.py  build_app.sh  create_icon.py  create_package.sh  gui_launcher.py  install.sh  main.py  monitor-layout  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  ultimate_gui_launcher.py
.github/: copilot-instructions.md
.github/workflows/: build-release.yml
cli/: __main__.py  advanced_cli.py  main.py
core/: advanced_display_manager.py  display_manager.py
devtools/docs/: DEVELOPMENT_LOG.md  README_detailed.md
dist-final/: INSTALL.txt
docs/: DEVELOPMENT_LOG.md
gui/: __init__.py  advanced_layout_manager.py  display_selector.py  settings_dialog.py
overrides/DisplayVendorID-610/: DisplayProductID-31333031.plist
release-clean/: README.md
scripts/: fish-integration.fish  install-fish.fish  monitor-cli  monitor-gui  monitor-layout.sh  setup-fish-completions.fish  setup-monitor-layout.sh
utils/: displayplacer.py  helpers.py
