[project]
name = "monitor-layout-manager"
version = "1.5.0"
description = "The easiest way to manage multiple monitors on macOS."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Artur Grochau", email = "arturgrochau@gmail.com" }]
dependencies = [
    "click>=8.0.0",
    "rich>=12.0.0",
    "colorama>=0.4.4",
    "pygments>=2.10.0",
    "markdown-it-py>=2.0.0",
]

[project.scripts]
monitor-layout = "main:main"

[project.optional-dependencies]
dev = ["py2app>=0.28.6"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools]
py-modules = ["main", "version", "app_launcher"]
packages = ["cli", "core", "gui", "utils"]
